--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,21 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javydreamercsw</groupId>
+            <artifactId>MySQL-Driver</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javydreamercsw</groupId>
+            <artifactId>MySQL-Driver</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javydreamercsw</groupId>
+            <artifactId>MySQL-Driver</artifactId>
+            <version>0.1</version>
+        </dependency>
 
 
     </dependencies>
